--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "suciuss\\type-ahead-emiter-field\\FieldServiceProvider"
+                "Suciuss\\TypeAheadEmiterField\\FieldServiceProvider"
             ]
         }
     },
